--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -18,15 +18,11 @@
     Электронная почта: <input type="email" name="email"><br><br>
     Номер телефона: <input type="text" name="phoneNumber"><br><br>
     Пароль: <input type="password" name="password"/><br><br>
-<!--    <input type="hidden" name="_csrf" content="${_csrf.token}">-->
+    <input type="hidden" name="csrf" value="${csrf.token}">
     <input type="submit" value="Зарегистрироваться"/>
-<!--    <p th:if="${#fields.hasErrors('password')}" class="text-danger"></p>-->
-<!--    <button th:href="@{/log}" type="submit" class="btn btn-black mr-5 mb-4">Войти</button>-->
-<!--    <button th:href="@{/registration}" type="submit" class="btn btn-secondary mb-3">Регистрация</button>-->
+    <!--    <p th:if="${#fields.hasErrors('password')}" class="text-danger"></p>-->
+    <!--    <button th:href="@{/login}" type="submit" class="btn btn-black mr-5 mb-4">Войти</button>-->
 
 </form>
-<!--<th:if expr=error??>-->
-<!--    <h2 style="color: red"> <input type="submit" value="error"/></h2>-->
-<!--</th:if>-->
 </body>
 </html>
