--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -37,7 +37,7 @@
     <tr>
         <th>
             <form action="/admin/user/ban/${user.id}" method="post">
-                <input type="hidden" name="_csrf" value="${_csrf.token}">
+                <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}">
                 <input type="submit" value="Бан">
             </form>
         </th>
