--- a/src/main/resources/templates/products.html
+++ b/src/main/resources/templates/products.html
@@ -48,7 +48,7 @@
         Первая фотография: <input type="file" name="file1"/><br><br>
         Вторая фотография: <input type="file" name="file2"/><br><br>
         Третья фотография: <input type="file" name="file3"/><br><br>
-        <input type="hidden" name="_csrf" value="${_csrf.token}">
+        <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}">
         <input type="submit" value="Добавить товар"/>
     </form>
 </if>
